@@ -115,6 +115,9 @@
     <Compile Include="Mono.Addins.Database\ISetupHandler.cs" />
     <Compile Include="Mono.Addins\ExtensionAttributeAttribute.cs" />
     <Compile Include="Mono.Addins\CustomExtensionAttribute.cs" />
+    <Compile Include="Mono.Addins\AddinAuthorAttribute.cs" />
+    <Compile Include="Mono.Addins\AddinLocalizerGettextAttribute.cs" />
+    <Compile Include="Mono.Addins\AddinCategoryAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Mono.Addins.dll.config">
