@@ -1,5 +1,16 @@
 2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* Makefile.am:
+	* Mono.Addins.csproj:
+	* Mono.Addins/AddinAttribute.cs:
+	* Mono.Addins/AddinAuthorAttribute.cs:
+	* Mono.Addins.Database/AddinScanner.cs:
+	* Mono.Addins/AddinCategoryAttribute.cs:
+	* Mono.Addins/AddinLocalizerGettextAttribute.cs: Allow
+	  specifying some add-in properties using attribtues.
+
+2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* Mono.Addins.Database/AddinScanner.cs:
 	* Mono.Addins.Description/AddinDescription.cs: Added support
 	  for multiple .addin.xml files in a single assembly.
